# finance-management-app

./: .mcp.json  CLAUDE.md  MIGRATION-PLAYBOOK.md  README.md  docker-compose.yml
ai-service/: .env.example  CLAUDE.md  package-lock.json  package.json  pyproject.toml  run.py
ai-service/alembic/: env.py
ai-service/alembic/versions/: d3d4e5f80e2c_create_ai_extraction_logs.py
ai-service/app/: config.py  db.py  db_models.py  dependencies.py  main.py  models.py
ai-service/app/routers/: extraction.py  health.py  logs.py
ai-service/app/services/: anthropic_extraction.py
ai-service/src/: app.ts  server.ts  types.ts
ai-service/src/config/: env.ts
ai-service/src/controllers/: extraction.controller.ts  health.controller.ts
ai-service/src/middleware/: require-internal-auth.ts
ai-service/src/routes/: extraction.routes.ts  index.ts
ai-service/src/services/: anthropic-extraction.ts
auth-service/: .env.example  CLAUDE.md  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/: .env.example  CLAUDE.md  package-lock.json  package.json
claim-service/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  package-lock.json  package.json
communications-service/: .env.example  CLAUDE.md  Dockerfile  package-lock.json  package.json
frontend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  eslint.config.mjs  package-lock.json  package.json
gateway-service/: .env.example  CLAUDE.md  package-lock.json  package.json
reports-service/: .env.example  CLAUDE.md  package-lock.json  package.json
user-stories/: 001-authentication.md  (+31 more)
(+636 files in other folders)
