[project]
name = "ai-service"
version = "1.0.0"
description = "Standalone AI/ML extraction microservice for Claim Management's Automated Extraction flow — stateless, called only by the main backend over HTTP."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = []
